data/derived/comb/progs/unify/prog1140.ml.out
Characters 64-72:
  wwhile((let helper x = (f x, x!=(f x)) in helper b), b);;
                                            ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
